added validation for the company struct
