# Controllers/Company.go
@@ -5,7 +5,7 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"go.mongodb.org/mongo-driver/bson"
 	"go.mongodb.org/mongo-driver/bson/primitive"
-	// "go.mongodb.org/mongo-driver/mongo"
+	"go.mongodb.org/mongo-driver/mongo"
 	"teleops/config"
 	"teleops/models"
 	"time"
@@ -15,8 +15,18 @@ import (
 func CreateCompany(c *fiber.Ctx) error {
 	companyCollection := config.MI.DB.Collection("company")
 	data := new(models.Company)
-	err := c.BodyParser(&data)
+	validationError := data.Validate()
 
+	if validationError != nil {
+		fmt.Print(validationError)
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"success": false,
+			"message": "Some fields failed in validation",
+			"error":   validationError.Error(),
+		})
+	}
+
+	err := c.BodyParser(&data)
 	if err != nil {
 		fmt.Print(err)
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
@@ -26,9 +36,10 @@ func CreateCompany(c *fiber.Ctx) error {
 		})
 	}
 	data.ID = ""
-	data.CreatedAt = time.Now()
-	data.UpdatedAt = time.Now()
-
+	time :=time.Now()
+	data.CreatedAt = &time
+	data.UpdatedAt = &time
+    
 	result, err := companyCollection.InsertOne(c.Context(), data)
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
@@ -46,8 +57,42 @@ func CreateCompany(c *fiber.Ctx) error {
 
 }
 
-//Get All Companies
+//Get one company by id
+func GetCompany(c *fiber.Ctx) error {
+	companyCollection := config.MI.DB.Collection("company")
+	// get parameter value
+	paramID := c.Params("id")
+	// convert parameterID to objectId
+	id, err := primitive.ObjectIDFromHex(paramID)
 
+	// if error while parsing paramID
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"success": false,
+			"message": "Cannot parse Id",
+			"error":   err,
+		})
+	}
+
+	//find company
+	device := &models.Device{}
+	query := bson.D{{Key: "_id", Value: id}}
+	err = companyCollection.FindOne(c.Context(), query).Decode(device)
+	if err != nil {
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
+			"success": false,
+			"message": "Company Not found",
+			"error":   err,
+		})
+	}
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{
+		"success": true,
+		"results": device,
+	})
+
+}
+
+//Get All Companies
 func GetCompanies(c *fiber.Ctx) error {
 	companyCollection := config.MI.DB.Collection("company")
 	// Query to filter
@@ -97,7 +142,7 @@ func UpdateCompany(c *fiber.Ctx) error {
 	}
 
 	// var data Request
-	data := new(models.Company)
+	data := new(models.CompanyUpdate)
 	err = c.BodyParser(data)
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
@@ -106,7 +151,8 @@ func UpdateCompany(c *fiber.Ctx) error {
 			"error":   err,
 		})
 	}
-	data.UpdatedAt = time.Now()
+	time :=time.Now()
+	data.UpdatedAt = &time
 	update := bson.M{
 		"$set": data,
 	}
@@ -125,5 +171,43 @@ func UpdateCompany(c *fiber.Ctx) error {
 		"success": true,
 		"message": "Company updated successfully",
 	})
+
+}
+
+//Delete company
+func DeleteCompany(c *fiber.Ctx) error {
+
+	collection := config.MI.DB.Collection("company")
+	// get param
+	paramID := c.Params("id")
+	// convert parameter to object id
+	id, err := primitive.ObjectIDFromHex(paramID)
+	// if parameter cannot parse
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"success": false,
+			"message": "Cannot parse id",
+			"error":   err,
+		})
+	}
+	// find and delete todo
+	query := bson.D{{Key: "_id", Value: id}}
+	err = collection.FindOneAndDelete(c.Context(), query).Err()
+	if err != nil {
+		if err == mongo.ErrNoDocuments {
+			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
+				"success": false,
+				"message": "Company Not found",
+				"error":   err,
+			})
+		}
+
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"success": false,
+			"message": "Cannot delete company",
+			"error":   err,
+		})
+	}
+	return c.SendStatus(fiber.StatusNoContent)
 
 }
