# docs/swagger.yaml
@@ -20,6 +20,8 @@ definitions:
         type: string
       updated_at:
         type: string
+    required:
+    - id
     type: object
   models.Data:
     properties:
@@ -194,6 +196,39 @@ paths:
       tags:
       - Company End Points
   /api/companies/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete company by id
+      operationId: delete-one-company
+      parameters:
+      - description: Company Id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Company'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+      summary: Delete company by id
+      tags:
+      - Company End Points
     patch:
       consumes:
       - application/json
@@ -236,12 +271,12 @@ paths:
     post:
       consumes:
       - application/json
-      description: Create a device
+      description: Create a company
       operationId: create-company
       parameters:
       - description: Company Details
         in: body
-        name: device
+        name: company
         required: true
         schema:
           $ref: '#/definitions/models.Company'
